--- a/resources/public/css/dash.css
+++ b/resources/public/css/dash.css
@@ -5,3 +5,56 @@
 #server-config-port-input {
   width: 6em;
 }
+
+#time-series-container {
+  padding-top: 45px;
+}
+
+.host-section {
+  padding-bottom: 10px;
+}
+
+.settings {
+  position: absolute;
+  z-index:3;
+  top: 0;
+  left: 0;
+  background: #1F1F1D;
+  opacity: 0.7;
+}
+
+.settings-button {
+  height: 32px;
+  width: 32px;
+}
+
+.settings-full {
+  width: 350px;
+  height: 500px;
+  overflow-y: auto;
+}
+
+.wrench-button {
+  position: absolute;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  opacity: 1.0;
+  width: 30px;
+  height: 30px;
+}
+
+#settings-form {
+  padding-top: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+}
+
+.settings-form-heading {
+  color: white;
+}
+
+.settings-form-section {
+  padding-bottom: 20px;
+}
