--- a/resources/public/css/dash.css
+++ b/resources/public/css/dash.css
@@ -20,7 +20,7 @@
   top: 0;
   left: 0;
   background: #1F1F1D;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .settings-button {
@@ -53,6 +53,7 @@
 
 .settings-form-heading {
   color: white;
+  line-height:30px;
 }
 
 .settings-form-section {
